# experiment_server

./: .debug-templates.el  .gitattributes  CHANGELOG.md  LICENSE.md  README.md  mkdocs.yml  pyproject.toml  sample_config.expconfig  sample_config.toml
.github/workflows/: static.yml  test.yml
docs/: documentation.md
experiment_server/: __init__.py  __main__.py  _api.py  _caliberation.py  _client.py  _main.py  _participant_ordering.py  _process_config.py  _server.py  _ui.py  cli.py  temp11.csv  utils.py
experiment_server/static/: base_config.expconfig  index.html  initconfig.html
experiment_server/static/css/: app.tcss
experiment_server/static/js/: fontawesome-1e694dd391.js
experiment_server/tests/: test_utils.py
test/: fixtures.py  test_api.py  test_cli.py  test_client.py  test_main.py  test_participant_ordering.py  test_process_config.py  test_utils.py
test/test_files/: failing_config.expconfig  failing_config.toml  failing_config_2.expconfig  working_file.expconfig  working_file.toml  working_file_2.expconfig  working_file_3.expconfig  working_file_4.expconfig  working_file_5.expconfig  working_file_6.expconfig  working_file_6.toml  working_file_7.toml  working_file_8.toml  working_file_9.toml
