[tool.poetry]

name = "experiment_server"
version = "0.1.0-alpha.4"
description = "Server for experiments to get configuarations from"

license = ""

authors = ["Ahmed Shariff <shariff.mfa@outlook.com>"]

readme = "README.md"

keywords = [
]
classifiers = [
    # TODO: update this list to match your application: https://pypi.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 1 - Planning",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
]
include = ["experiment_server/static/initconfig.html",
	   "experiment_server/static/base_config.expconfig"]

[tool.poetry.dependencies]

python = ">=3.8"
loguru = "^0.5"
click = ">=6.0"
pandas = "^1"
easydict = "^1"
Flask-RESTful = "^0.3.9"


[tool.poetry.scripts]

experiment-server = "experiment_server.cli:cli"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
