[tool.poetry]

name = "experiment_server"
version = "0.2"
description = "Server for experiments to get configuarations from"

license = ""

authors = ["Ahmed Shariff <shariff.mfa@outlook.com>"]

readme = "README.md"

keywords = [
]
classifiers = [
    # TODO: update this list to match your application: https://pypi.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 1 - Planning",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
]
include = ["experiment_server/static/initconfig.html",
	   "experiment_server/static/base_config.expconfig"]

[tool.poetry.dependencies]

python = ">=3.8, <4"
loguru = "^0.5"
click = ">=6.0"
pandas = "^1"
easydict = "^1"
tabulate = "^0.8.9"
requests = "^2.25.1"
tornado = "^6.2"
asyncio = "^3.4.3"
Jinja2 = "^3.1.2"
toml = "^0.10.2"
watchdog = "^2.1.9"


[tool.poetry.scripts]

experiment-server = "experiment_server.cli:cli"

[tool.poetry.dev-dependencies]
pytest = "^6"
pytest-mock = "^3"
pytest-cov = "^2"
deepdiff = "^5.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--color=yes --durations=5 --code-highlight=yes --showlocals --verbose --cov=experiment_server"
testpaths = ["test"]
console_output_style = "progress"